--- a/.github/workflows/pr_context_commenter.yaml
+++ b/.github/workflows/pr_context_commenter.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Add PR Context Comment
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           script: |
             const payload = context.payload;
             
