--- a/.github/workflows/build_website.yaml
+++ b/.github/workflows/build_website.yaml
@@ -36,14 +36,14 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_build
           # # set it to a subfolder of the root to keep all PR previews:
-          destination_dir: latest
+          # destination_dir: latest
           # cname: website.com
-      - if: ${{ github.event_name == 'pull_request' }}
+      - if: ${{ github.event_name == 'pull_request' && contains(fromJson('["COLLABORATOR","MEMBER","OWNER"]'), github.event.pull_request.author_association) }}
         name: Save to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./_build
-          # # create a version for an PR
-          # # will be automatically deleted in case the build in on the root
+          # # create a version for a PR
+          # # will be automatically deleted in case the build is on the root
           destination_dir: pr-${{ github.event.number }}
