--- a/.github/workflows/pr_context_commenter.yaml
+++ b/.github/workflows/pr_context_commenter.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/github-script@v6
         if: contains(fromJson('["COLLABORATOR","MEMBER","OWNER"]'), github.event.pull_request.author_association)
         with:
-          github-token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const payload = context.payload;
             
