--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
       "extensions": [
         "ms-toolsai.jupyter",
         "ms-python.python",
-        "mechatroner.rainbow-csv"
+        "mechatroner.rainbow-csv",
+        "ms-vscode.live-server"
       ],
       // Use Python from conda
       "settings": {},
