🔧 specify how to handle diverging local and upstream branches

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,8 +13,11 @@
   // "forwardPorts": [],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "pip3 install --user -r requirements.txt",
-//   "onCreateCommand": "bash .devcontainer/setup.sh",
+  "postCreateCommand": [
+    "pip3 install --user -r requirements.txt",
+    "git config --local pull.rebase false"
+  ],
+  //   "onCreateCommand": "bash .devcontainer/setup.sh",
 
   // Configure tool-specific properties.
   "customizations": {
