--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,10 +13,7 @@
   // "forwardPorts": [],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": [
-    "pip3 install --user -r requirements.txt",
-    "git config --local pull.rebase false"
-  ],
+  "postCreateCommand": "pip3 install --user -r requirements.txt; git config --local pull.rebase false",
   //   "onCreateCommand": "bash .devcontainer/setup.sh",
 
   // Configure tool-specific properties.
