--- a/.github/workflows/build_website.yaml
+++ b/.github/workflows/build_website.yaml
@@ -42,7 +42,7 @@ jobs:
         name: Save to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_build
           # # create a version for a PR
           # # will be automatically deleted in case the build is on the root
